# foreach

./: CMakeLists.txt  README.md  build.bat  build.sh
src/: help.cpp  help.h  main.cpp
tests/: countries.txt  repos.txt  tests.sh
